--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
-    "electron": "^19.0.4",
     "glasstron": "^0.1.1"
   },
   "name": "com.cot.framework.desktop",
   "version": "1.0.0",
   "description": "Basic desktop framework for Cot Applications",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "electron": "^19.0.4",
+    "electron-packager": "^15.5.1"
+  },
   "scripts": {
-    "test": "electron ."
+    "start": "electron .",
+    "build": " electron-packager . Cot-Desktop-Application-Framework --platform=win32 --icon=icon.ico --app-version=1.0.0 --overwrite --out=../build"
   },
   "repository": {
     "type": "git",
